--- a/Advance DOTNET/API_Create_Consume/APIDemo/APIDemo/APIDemo.csproj
+++ b/Advance DOTNET/API_Create_Consume/APIDemo/APIDemo/APIDemo.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Quintsys.Practices.EnterpriseLibrary.Data" Version="1.0.5" />
+    <PackageReference Include="EnterpriseLibrary.Data" Version="6.0.1304" />
+    <PackageReference Include="EnterpriseLibrary.Data.NetCore" Version="6.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
