--- a/Advance DOTNET/API_Create_Consume/APIDemo/APIDemo/APIDemo.csproj
+++ b/Advance DOTNET/API_Create_Consume/APIDemo/APIDemo/APIDemo.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="EnterpriseLibrary.Data" Version="6.0.1304" />
     <PackageReference Include="EnterpriseLibrary.Data.NetCore" Version="6.3.2" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
