--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/TruckTransportManegment.csproj
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/TruckTransportManegment.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Areas\MainPages\Views\Pages\Home.cshtml~RF5a83fa2f.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="Quintsys.Practices.EnterpriseLibrary.Data" Version="1.0.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
